# ekg

./: .cvsignore  ChangeLog  ChangeLog.1  IDEAS  Makefile.in  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  endian.h  reconf.sh
compat/: dirname.c  getopt.h  scandir.c  scandir.h
contrib/: Auto_Make_EKG  diff-2001101401-alias+save  ekg-20010919-wysek.patch  ekg-docs.diff  ekg-feeg.diff  ekg-pkot.diff  ekg-up-2001082202-1.diff  ekg.pl  ekg_logs.tar.bz2  ekgh  ekglog.pl  ekgnv.sh  ekgsearch  ekl2.sh  endian.c  getekg.sh  ioctld-client.c  leakdet.pl  link.pl  listmerge.c  patch-20011106  rl_version.c  test.py
contrib/ekg_logs/: Makefile  gglogi.vim  parse.c
contrib/m4/: curses.m4  readline.m4
contrib/patch/: ascent.cflags-and-pipe.patch  ekg-list.patch  ekg-time.diff  ekg-watches.patch  ekg-windows.c  irix.patch  klith-ala_ma_kota.patch  klith-kupa.diff  pipedet.patch  query_commands.patch
contrib/scripts/: ekgbot-pre1.py  linki.py
debian/: README.Debian  build.rules  changelog  common.rules  control  copyright  ekg-dbg-deb.postinst  ekg-dbg-dev.docs  ekg-dbg.postinst  ekg-dbg.rules  ekg-dev.dirs  ekg-dev.docs  ekg-dev.files  ekg-dev.postinst  ekg-dev.shlibs  ekg-doc.docs  ekg-ioctld.docs  ekg-ioctld.menu  ekg-ioctld.postinst  ekg-ioctld.postrm  ekg-ioctld.rules  ekg.1  ekg.dirs  ekg.docs  ekg.files  ekg.menu  ekg.postinst  ekg.postrm  ekg.rules  files  ioctld.1  rules
docs/: 7thguard.txt  BUGS  FAQ  IDEAS-2.0  Makefile  README  TODO  ULOTKA  addons.txt  api.txt  dcc-protocol.txt  dcc.txt  devel-hints.txt  ekg.man  ekg.man.en  ekg.man.pl  ekg.spec  ekglogs.man.en  ekglogs.man.pl  ekgsearch.man.en  ekgsearch.man.pl  ekl.pl  ekl2.man.en  ekl2.man.pl  emoticons.sample  emoticons.txt  files.txt  gdb.txt  historia.txt  http.txt  lcamtuf.theme  libgadu.txt  mysz.txt  on.txt  protocol.html  protocol.txt  python.txt  sim.txt  slonko.txt  slownik.txt  (+7 more)
docs/api/: ref.css
dumps/: README  search50.txt  tdx
dumps/gg/: 0.logout.txt  0.plumk.txt  1.conn.txt  1.disconn.txt  1.recv.txt  1.send2.txt  2.conn2  2.ignore  2.passwd  2.passwd-A  2.search  2.send  2.send.txt  2.status1  2.status1.txt  2.status2  2.status2.txt  6.add.txt  6.conn-notify.txt  6.dunno.txt  6.leave-join.txt  7.aska.txt  7.aska2.txt  7.aska3.txt  7.aska4.txt  7.aska5.txt  7.mesgi.txt  8.https.txt  ctcp-msg  gg-file-transfer-from-lookas-to-arekm-longfile.ethereal  gg-file-transfer-from-lookas-to-arekm.ethereal  gg-file-transfer-from-lookas-to-arekm.ethereal.txt  gg-rozmowa-wyslanie-odbior.ethereal  gg-rozmowa-wyslanie-odbior.ethereal.txt
dumps/http/: change.txt  chpasswd.txt  imp-exp.txt  init.txt  new-uin.txt  passwd.txt  passwd2.txt  remind.txt  search.txt
dumps/reg-hashes/: bar  foo  hashes  inst1a  inst2a  inst3a  inst4a  inst5a  inst6a
examples/: .cvsignore  Makefile  Makefile.in  conn-async.c  httphash.c  register.c  remind.c  search.c  send.c
lib/: .cvsignore  Makefile.in  http.c  http.h  libgadu.c  libgadu.h  libgg_search.c  register.c  search.c  search50.c  userlist.c
m4/: curses.m4  python.m4  readline.m4
src/: .cvsignore  Makefile.in  commands.c  commands.h  compat.h  comptime.c  comptime.h  configfile.c  configfile.h  dynstuff.c  dynstuff.h  ekg.c  emoticons.c  emoticons.h  events.c  events.h  ioctld.c  ioctld.h  log.c  log.h  mail.c  mail.h  msgqueue.c  msgqueue.h  python.c  python.h  sim.c  sim.h  simlite.c  simlite.h  stuff.c  stuff.h  themes.c  themes.h  token.h  ui-automaton.c  ui-batch.c  ui-batch.h  ui-gtk-bindings.c  ui-gtk-chanview-tabs.c  (+26 more)
themes/: 2k2.theme  arim.theme  arim_irc.theme  dj.theme  eileen.theme  emers.theme  extract.pl  feeg.theme  fi9o.theme  gophi.theme  irc.theme  irc2.theme  jamzed.theme  klith.theme  krzyk.theme  lcamtuf.theme  leon.theme  matik.theme  old.theme  sic.theme  szalik.theme  tohver.theme
win32/: README  config.h  netdb.h  pwd.h  stdint.h  unistd.h
win32/arpa/: inet.h
win32/netinet/: in.h
win32/sys/: ioctl.h  socket.h  time.h  wait.h
