dnl $Id$

AC_INIT(lib/libgadu.h)

PACKAGE=ekg
VERSION=0.9

AC_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_SUBST(DFLAGS)

AC_ARG_WITH(debug, 
  [  --without-debug  	  Compile without debug [-Wall, -ggdb]])

if test "x$with_debug" = "xno"; then 
  DFLAGS=""
else
  DFLAGS="-Wall -ggdb" 
fi

AC_ARG_WITH(termcap, 
  [  --without-termcap       Used to force curses/ncurses])

if test "x$with_termcap" = "xno"; then 
  TERMCAP_LIB=""
else
  AC_CHECK_LIB(termcap, tgetent, TERMCAP_LIB=-ltermcap)
  LIBS="$LIBS $TERMCAP_LIB"
fi

if test "x$TERMCAP_LIB" = "x"; then 
   AC_CHECK_CURSES
fi

AC_CHECK_READLINE

if test "x$READLINE_LIBS" = "x"; then
    AC_MSG_RESULT([not found])
    AC_MSG_ERROR([You need both readline and readline-devel packages.])
fi

SAVE_LIBS="$LIBS"
SAVE_CFLAGS="$CFLAGS"
LIBS="$LIBS $READLINE_LIBS"
CFLAGS="$CFLAGS $READLINE_INCLUDES"

AC_CACHE_CHECK([for rl_set_prompt() in readline], ac_cv_has_rl_set_prompt,
[AC_TRY_LINK([#include <stdio.h>
#include <readline/readline.h>
], [rl_set_prompt("");], [ac_cv_has_rl_set_prompt=yes], [ac_cv_has_rl_set_prompt=no])])
if test x"$ac_cv_has_rl_set_prompt" != xno; then
    AC_DEFINE(HAS_RL_SET_PROMPT)
fi

AC_CACHE_CHECK([for rl_filename_completion_function() in readline], ac_cv_has_rl_completion,
[AC_TRY_LINK([#include <stdio.h>
#include <readline/readline.h>
], [char *x = rl_filename_completion_function("", 0);], [ac_cv_has_rl_completion=yes], [ac_cv_has_rl_completion=no])])
if test x"$ac_cv_has_rl_completion" != xno; then
    AC_DEFINE(HAS_RL_COMPLETION)
fi

AC_CACHE_CHECK([for rl_get_screen_size() in readline], ac_cv_has_rl_get_screen_size,
[AC_TRY_LINK([#include <stdio.h>
#include <readline/readline.h>
], [int x,y; rl_get_screen_size(&y,&x);], [ac_cv_has_rl_get_screen_size=yes], [ac_cv_has_rl_get_screen_size=no])])
if test x"$ac_cv_has_rl_get_screen_size" != xno; then
    AC_DEFINE(HAS_RL_GET_SCREEN_SIZE)
fi

AC_CACHE_CHECK([for rl_set_key() in readline], ac_cv_has_rl_set_key,
[AC_TRY_LINK([#include <stdio.h>
#include <readline/readline.h>
], [rl_set_key("foo",(void*)0,rl_get_keymap());], [ac_cv_has_rl_set_key=yes], [ac_cv_has_rl_set_key=no])])
if test x"$ac_cv_has_rl_set_key" != xno; then
    AC_DEFINE(HAS_RL_SET_KEY)
fi

LIBS="$SAVE_LIBS"
CFLAGS="$SAVE_CFLAGS"

AC_PATH_PROG(RM, rm, no)
if test "x$RM" = "xno"; then
    AC_MSG_ERROR([rm ])
fi

AC_PATH_PROG(GMAKE, gmake, no)
if test "x$GMAKE" = "xno"; then
    AC_PATH_PROG(MAKE, make, no)
    if test "x$MAKE" = "xno"; then
	AC_MSG_ERROR([make ])
    fi
else
    MAKE=$GMAKE
fi


AC_PATH_PROG(AR, ar, no)
if test "x$AR" = "xno"; then
    AC_MSG_ERROR([ar ])
fi

AC_C_BIGENDIAN

AC_CHECK_LIB(nsl, t_accept, LIBS="$LIBS -lnsl")
AC_CHECK_LIB(socket, socket, LIBS="$LIBS -lsocket")

AC_SUBST(do_ioctl)
AC_SUBST(dioctl)
AC_SUBST(shared)
AC_SUBST(install_ioctl)
AC_SUBST(install_shared)
AC_SUBST(ioctl_cflags)

AC_ARG_WITH(ioctl, 
  [  --with-ioctl  	  Compile with ioctl deamon [linux only]])

if test "x$with_ioctl" = "xyes"; then 
  do_ioctl="ioctl_daemon"
  dioctl=" -DIOCTL "  
  install_ioctl="install_ioctl"
  ioctl_cflags="-DIOCTL_DAEMON_PATH=\\\"\$(prefix)/bin/ioctl_daemon\\\""
else
  do_ioctl=""
  dioctl=""
  install_ioctl=""
  ioctl_cflags=""
fi

AC_ARG_WITH(shared, 
  [  --with-shared  	  Compile shared version of libgadu])

if test "x$with_shared" = "xyes"; then 
  shared="shared"
  install_shared="install_shared"
else
  shared="" 
  install_shared=""
fi


#if test ! -e  config.h; then 
#    echo -n "ordering CD from http://dev.null.pl/ekg/CD $ac_c" 1>&6
#    sleep 1
#    echo -n ".$ac_c" 1>&6
#    sleep 1
#    echo -n ".$ac_c" 1>&6
#    sleep 1
#    echo -n ".$ac_c" 1>&6
#    sleep 1
#    AC_MSG_RESULT([ just kidding :)])
#fi

AC_OUTPUT(Makefile lib/Makefile src/Makefile examples/Makefile)
#    echo "----------------------------------------------------------------"
#    echo "configure is DONE!"
#    echo "----------------------------------------------------------------"

